# cambridge

./: .gitignore  Makefile  README.md  file.py  main.py  pyproject.toml  requirements.txt
cambridge/: __init__.py  args.py  cache.py  camb.py  cambridge.py  color.py  console.py  errors.py  fetch.py  fetch_mw_playwright.py  log.py  main.py  settings.py  utils.py  webster.py
cambridge/colorscheme/: webster_color.py
cambridge/colorschemes/: webster_color.py
cambridge/dicts/: cambridge.py  dict.py  dicts.py  webster.py  webster_color.py
