[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "cambridge"
description-file = "README.md"
author = "Kate Wang"
author-email = "kate.wang2018@gmail.com"
home-page = "https://github.com/KateWang2016/cambridge" 

requires = [
    "requests",
    "beautifulsoup4",
    "rich"
]

keywords = "dictionary, cambridge, web scraping, python"

classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", "Programming Language :: Python :: 3", "Environment :: Console"]

[tool.flit.metadata.requires-extra]
publish = ["flit"]

[tool.flit.scripts]
camb = "cambridge.main:main"
